--- a/chuxiao.html
+++ b/chuxiao.html
@@ -10,11 +10,11 @@
         <div style="position:relative;left:0;right:0">
         <div>
             <p style="color: black; font-size: 95px; margin-top: 30px; margin-bottom: 30px;">出校</p>
-            <p id="nas" style="color: black; margin-bottom: 12px;"></p>
+            <p id="nas" style="color: black; margin-bottom: 12px; font-size: 20px;">何启怡-202240720111</p>
             <hr style=" height:2px;border:none;border-top:2px solid #c0c0c0;"/>
         </div>
         <div style="font-size:95px;">
-            <p id="demo" style="color: black;">hhh</p>
+            <p id="demo" style="color: black;">学生:何启怡, 白名单验证通过,该申请离校扫码1次,离校码只能使用一次,请不要重复打开</p>
             <p id="nowDateTime" style="color: red; display: none;"></p>
             <p id="nowDateTimeSpan" style="color: red;"></p>
         </div>
